--- a/src/components/l-map/l-map.css
+++ b/src/components/l-map/l-map.css
@@ -6,6 +6,10 @@ img.leaflet-marker-icon {
   filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.5));
 }
 
+a.leaflet-control-layers-toggle {
+  background-image: url('/assets/images/layers.png');
+}
+
 /*#l-map .leaflet-top {*/
   /*top: 48px;*/
 /*}*/
