--- a/src/components/l-map/l-map.css
+++ b/src/components/l-map/l-map.css
@@ -1,15 +1,15 @@
 #l-map {
-    height: 100%;
+  height: 100%;
 }
 
 img.leaflet-marker-icon {
-  filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.5));
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 
 a.leaflet-control-layers-toggle {
-  background-image: url('/assets/images/layers.png');
+  background-image: url('./assets/images/layers.png') !important;
 }
 
-/*#l-map .leaflet-top {*/
-  /*top: 48px;*/
-/*}*/
+.leaflet-retina a.leaflet-control-layers-toggle {
+  background-image: url('./assets/images/layers-2x.png') !important;
+}
