--- a/src/components/l-map/l-map.css
+++ b/src/components/l-map/l-map.css
@@ -7,9 +7,9 @@ img.leaflet-marker-icon {
 }
 
 a.leaflet-control-layers-toggle {
-  background-image: url('./assets/images/layers.png') !important;
+  background-image: url(./assets/images/layers.png) !important;
 }
 
 .leaflet-retina a.leaflet-control-layers-toggle {
-  background-image: url('./assets/images/layers-2x.png') !important;
+  background-image: url(./assets/images/layers-2x.png) !important;
 }
